fix overlap of user input string and microphone icon

--- a/styles/style.css
+++ b/styles/style.css
@@ -45,6 +45,7 @@ input {
     box-shadow: 0 1px 6px 0 rgba(32, 33, 36, .28);
     font-size: 16px;
     border-style: none;
+    padding-right: 50px; 
 }
 
 input:focus::-webkit-input-placeholder
